--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,13 @@
 asgiref==3.5.2
 Django==4.1.2
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
+et-xmlfile==1.1.0
+numpy==1.23.5
+openpyxl==3.0.10
+pandas==1.5.2
+PyJWT==2.6.0
+python-dateutil==2.8.2
+pytz==2022.6
+six==1.16.0
 sqlparse==0.4.3
